--- a/bin/jndi.properties
+++ b/bin/jndi.properties
@@ -9,9 +9,9 @@ java.naming.provider.url = tcp://localhost:61616
  
 # register some queues in JNDI using the form
 # queue.[jndiName] = [physicalName]
-queue.fila = fila.teste
+queue.fila = fila.mensagem
  
  
 # register some topics in JNDI using the form
 # topic.[jndiName] = [physicalName]
-topic.topico = topico.teste
+topic.topico = topico.mensagem
